	* Reverted bug #11087 from rev 5441: Selecting more than one item in a selector box is not possible anymore
	* Added feature #11148: Remove static require_once() to t3lib and tslib and use autoloading instead
	* Fixed bug #11152: Warning in Import/Export Module (thanks to Susanne Moog & Rupert Germann)

2009-05-22  Rupert Germann  <rupi@gmx.li>

	* Added feature #11074: Add more information to the list of extensions in EM import mode (thanx to Steffen Mueller)

2009-05-21  Steffen Kamper  <info@sk-typo3.de>

	* Reverted bug #11038 from rev 5451: gr_list and loginUser are not set properly in TSFE anymore
	* Fixed bug #11022: DBAL does not support SQL having "+" (used in cache management)  (thanks to Xavier Perseguers)
	* Fixed bug #8231: DBAL's bug admin_get_charsets() on a non-object (thanks to Xavier Perseguers)

2009-05-20  Oliver Hader  <oliver@typo3.org>

	* Added feature #11153: Integrate t3lib_div::requireFile() for simple require() calls
	* Follow-up to feature #9633: XCLASSes did not work for autoloaded class files
	* Fixed bug #11156: Misbehaviours due to integration of autoloader (XCLASSes)
	* Fixed bug #11156: Misbehaviours due to integration of autoloader (includeLibs in frontend)
	* Follow-up to bug #11156: Fixed further misbehaviour of includeLibs in frontend

2009-05-20  Steffen Kamper  <info@sk-typo3.de>

	* Follow-up to #11044: moved the relogin stuff to extra file, used TYPO3.LLL.core for the labels
	* Fixed bug #10861: Eval of double2 doesn't work
	* Fixed bug #10994: allow using custom adapter for extJs

2009-05-19  Sebastian Kurfuerst  <sebastian@typo3.org>

	* Updated Extbase revisions to 680; that fixed a small issue on registering plugins

2009-05-19  Oliver Hader  <oliver@typo3.org>

	* Added feature #9633: Implement autoloading for TYPO3
	* Follow-up to feature #9633: Enabled autoloading in TYPO3 Core
	* Follow-up to feature #9633: Added abstract classes to registry and check whether extension key could be resolved