@@ -435,7 +435,21 @@ class TYPO3backend {
 			'errorUploadStopped' => "Upload of {0} stopped",
 		)) . '};
 
-	
+	/**
+	 * TypoSetup object.
+	 */
+	function typoSetup()	{	//
+		this.PATH_typo3 = TYPO3.configuration.PATH_typo3;
+		this.PATH_typo3_enc = TYPO3.configuration.PATH_typo3_enc;
+		this.username = TYPO3.configuration.username;
+		this.uniqueID = TYPO3.configuration.uniqueID;
+		this.navFrameWidth = 0;
+		this.securityLevel = TYPO3.configuration.securityLevel;
+		this.veriCode = TYPO3.configuration.veriCode;
+		this.denyFileTypes = TYPO3.configuration.denyFileTypes;
+	}
+	var TS = new typoSetup();
+
 	var currentModuleLoaded = "";
 	var goToModule = ' . $goToModuleSwitch . '; 
 
